...
					Spacer()
					SignInWithAppleView(activityIndicatorInfo: self.$activityIndicatorInfo, alertInfo: self.$alertInfo)
						.frame(width: 350, height: 50)
					NavigationLink(destination: phoneAuth()) {
						HStack {
							Spacer()
							Text("Continue with Phone")
								.foregroundColor(.white)
								.font(.system(size: 16))
								.underline()
							Spacer()
						}
					}.padding(.bottom, 25)
...
